--- a/examples/rest-api/index.html
+++ b/examples/rest-api/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
